bpk-lib/crates/macbat/macros/tests/trybuild_negative/operation_async_fn.stderr
error: async operation
  --> tests/trybuild_negative/operation_async_fn.rs:10:1
   |
10 | async fn f(input: &[u8], cx: &mut u8) -> u8 {
   | ^^^^^
